// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateTests can generate fixture ARRAY_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/ARRAY_PROPS/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ArrayPropsNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ArrayPropsNativeComponentProps>();
  auto const &sourceProps = ArrayPropsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ArrayPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ArrayPropsNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ArrayPropsNativeComponentProps>();
  auto const &sourceProps = ArrayPropsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ArrayPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/BOOLEAN_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(BooleanPropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<BooleanPropNativeComponentProps>();
  auto const &sourceProps = BooleanPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  BooleanPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(BooleanPropNativeComponentProps_disabled, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<BooleanPropNativeComponentProps>();
  auto const &sourceProps = BooleanPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  BooleanPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture COLOR_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/COLOR_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ColorPropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ColorPropNativeComponentProps>();
  auto const &sourceProps = ColorPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ColorPropNativeComponentProps_tintColor, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ColorPropNativeComponentProps>();
  auto const &sourceProps = ColorPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"tintColor\\", 1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture COMMANDS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/COMMANDS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(CommandNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<CommandNativeComponentProps>();
  auto const &sourceProps = CommandNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  CommandNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/COMMANDS_AND_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(CommandNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<CommandNativeComponentProps>();
  auto const &sourceProps = CommandNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  CommandNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(CommandNativeComponentProps_accessibilityHint, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<CommandNativeComponentProps>();
  auto const &sourceProps = CommandNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"accessibilityHint\\", \\"foo\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  CommandNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/DOUBLE_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(DoublePropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<DoublePropNativeComponentProps>();
  auto const &sourceProps = DoublePropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  DoublePropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(EventsNestedObjectNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<EventsNestedObjectNativeComponentProps>();
  auto const &sourceProps = EventsNestedObjectNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  EventsNestedObjectNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(EventsNestedObjectNativeComponentProps_disabled, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<EventsNestedObjectNativeComponentProps>();
  auto const &sourceProps = EventsNestedObjectNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  EventsNestedObjectNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EVENT_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EVENT_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(EventsNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<EventsNativeComponentProps>();
  auto const &sourceProps = EventsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  EventsNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(EventsNativeComponentProps_disabled, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<EventsNativeComponentProps>();
  auto const &sourceProps = EventsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  EventsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(InterfaceOnlyComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<InterfaceOnlyComponentProps>();
  auto const &sourceProps = InterfaceOnlyComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  InterfaceOnlyComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EXCLUDE_ANDROID/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ExcludedAndroidComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ExcludedAndroidComponentProps>();
  auto const &sourceProps = ExcludedAndroidComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ExcludedAndroidComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EXCLUDE_ANDROID_IOS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ExcludedAndroidIosComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ExcludedAndroidIosComponentProps>();
  auto const &sourceProps = ExcludedAndroidIosComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ExcludedAndroidIosComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ExcludedIosComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ExcludedIosComponentProps>();
  auto const &sourceProps = ExcludedIosComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ExcludedIosComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFileIncludedNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiFileIncludedNativeComponentProps>();
  auto const &sourceProps = MultiFileIncludedNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiFileIncludedNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFileIncludedNativeComponentProps_disabled, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiFileIncludedNativeComponentProps>();
  auto const &sourceProps = MultiFileIncludedNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"disabled\\", true));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiFileIncludedNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture FLOAT_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/FLOAT_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(FloatPropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<FloatPropNativeComponentProps>();
  auto const &sourceProps = FloatPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<FloatPropNativeComponentProps>();
  auto const &sourceProps = FloatPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"blurRadius\\", 0));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius2, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<FloatPropNativeComponentProps>();
  auto const &sourceProps = FloatPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"blurRadius2\\", 0.001));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius3, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<FloatPropNativeComponentProps>();
  auto const &sourceProps = FloatPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"blurRadius3\\", 2.1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius4, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<FloatPropNativeComponentProps>();
  auto const &sourceProps = FloatPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"blurRadius4\\", 0));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius5, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<FloatPropNativeComponentProps>();
  auto const &sourceProps = FloatPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"blurRadius5\\", 1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius6, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<FloatPropNativeComponentProps>();
  auto const &sourceProps = FloatPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"blurRadius6\\", 0));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture IMAGE_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/IMAGE_PROP/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ImagePropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ImagePropNativeComponentProps>();
  auto const &sourceProps = ImagePropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ImagePropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImagePropNativeComponentProps_thumbImage, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ImagePropNativeComponentProps>();
  auto const &sourceProps = ImagePropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"thumbImage\\", folly::dynamic::object(\\"url\\", \\"testurl\\")));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ImagePropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture INSETS_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/INSETS_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(InsetsPropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<InsetsPropNativeComponentProps>();
  auto const &sourceProps = InsetsPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  InsetsPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/INT32_ENUM_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(Int32EnumPropsNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<Int32EnumPropsNativeComponentProps>();
  auto const &sourceProps = Int32EnumPropsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  Int32EnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture INTEGER_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/INTEGER_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(IntegerPropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<IntegerPropNativeComponentProps>();
  auto const &sourceProps = IntegerPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  IntegerPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/INTERFACE_ONLY/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(InterfaceOnlyComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<InterfaceOnlyComponentProps>();
  auto const &sourceProps = InterfaceOnlyComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  InterfaceOnlyComponentProps(parserContext, sourceProps, rawProps);
}

TEST(InterfaceOnlyComponentProps_accessibilityHint, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<InterfaceOnlyComponentProps>();
  auto const &sourceProps = InterfaceOnlyComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"accessibilityHint\\", \\"foo\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  InterfaceOnlyComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/MULTI_NATIVE_PROP/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ImageColorPropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ImageColorPropNativeComponentProps>();
  auto const &sourceProps = ImageColorPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImageColorPropNativeComponentProps_thumbImage, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ImageColorPropNativeComponentProps>();
  auto const &sourceProps = ImageColorPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"thumbImage\\", folly::dynamic::object(\\"url\\", \\"testurl\\")));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImageColorPropNativeComponentProps_color, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ImageColorPropNativeComponentProps>();
  auto const &sourceProps = ImageColorPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"color\\", 1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImageColorPropNativeComponentProps_thumbTintColor, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ImageColorPropNativeComponentProps>();
  auto const &sourceProps = ImageColorPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"thumbTintColor\\", 1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImageColorPropNativeComponentProps_point, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ImageColorPropNativeComponentProps>();
  auto const &sourceProps = ImageColorPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"point\\", folly::dynamic::object(\\"x\\", 1)(\\"y\\", 1)));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/NO_PROPS_NO_EVENTS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(NoPropsNoEventsComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<NoPropsNoEventsComponentProps>();
  auto const &sourceProps = NoPropsNoEventsComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  NoPropsNoEventsComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture OBJECT_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/OBJECT_PROPS/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ObjectPropsProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<ObjectPropsProps>();
  auto const &sourceProps = ObjectPropsProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  ObjectPropsProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture POINT_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/POINT_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(PointPropNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<PointPropNativeComponentProps>();
  auto const &sourceProps = PointPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  PointPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(PointPropNativeComponentProps_startPoint, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<PointPropNativeComponentProps>();
  auto const &sourceProps = PointPropNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"startPoint\\", folly::dynamic::object(\\"x\\", 1)(\\"y\\", 1)));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  PointPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/STRING_ENUM_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(StringEnumPropsNativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<StringEnumPropsNativeComponentProps>();
  auto const &sourceProps = StringEnumPropsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  StringEnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringEnumPropsNativeComponentProps_alignment_Top, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<StringEnumPropsNativeComponentProps>();
  auto const &sourceProps = StringEnumPropsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"alignment\\", \\"top\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  StringEnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringEnumPropsNativeComponentProps_alignment_Center, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<StringEnumPropsNativeComponentProps>();
  auto const &sourceProps = StringEnumPropsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"alignment\\", \\"center\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  StringEnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringEnumPropsNativeComponentProps_alignment_BottomRight, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<StringEnumPropsNativeComponentProps>();
  auto const &sourceProps = StringEnumPropsNativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"alignment\\", \\"bottom-right\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  StringEnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture STRING_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/STRING_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(StringPropComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<StringPropComponentProps>();
  auto const &sourceProps = StringPropComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  StringPropComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringPropComponentProps_accessibilityHint, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<StringPropComponentProps>();
  auto const &sourceProps = StringPropComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"accessibilityHint\\", \\"foo\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  StringPropComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringPropComponentProps_accessibilityRole, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<StringPropComponentProps>();
  auto const &sourceProps = StringPropComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"accessibilityRole\\", \\"foo\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  StringPropComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(MultiFile1NativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiFile1NativeComponentProps>();
  auto const &sourceProps = MultiFile1NativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiFile1NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFile1NativeComponentProps_disabled, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiFile1NativeComponentProps>();
  auto const &sourceProps = MultiFile1NativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiFile1NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFile2NativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiFile2NativeComponentProps>();
  auto const &sourceProps = MultiFile2NativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiFile2NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFile2NativeComponentProps_disabled, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiFile2NativeComponentProps>();
  auto const &sourceProps = MultiFile2NativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"disabled\\", true));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiFile2NativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(MultiComponent1NativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiComponent1NativeComponentProps>();
  auto const &sourceProps = MultiComponent1NativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiComponent1NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiComponent1NativeComponentProps_disabled, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiComponent1NativeComponentProps>();
  auto const &sourceProps = MultiComponent1NativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiComponent1NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiComponent2NativeComponentProps_DoesNotDie, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiComponent2NativeComponentProps>();
  auto const &sourceProps = MultiComponent2NativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiComponent2NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiComponent2NativeComponentProps_disabled, etc) {
  auto propParser = RawPropsParser();
  propParser.prepare<MultiComponent2NativeComponentProps>();
  auto const &sourceProps = MultiComponent2NativeComponentProps();
  auto const &rawProps = RawProps(folly::dynamic::object(\\"disabled\\", true));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser, parserContext);
  MultiComponent2NativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;
